<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rl_main_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/wv_webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:visibility="gone"
                app:cardCornerRadius="7dp">

                <LinearLayout
                    android:id="@+id/ll_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_imgUser"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dp_10"
                        android:src="@drawable/icon_user" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="搜索" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_main_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_search"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_20"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_main_msg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_message"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="消息"
                    android:textColor="#ffffff"
                    android:textSize="10sp" />

                <com.appler.universitysystem.utils.customView.TipView
                    android:id="@+id/tip_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"


                    android:background="@color/background"
                    android:paddingLeft="@dimen/dp_12" />
            </LinearLayout>


            <!--右上 操作 cardview-->
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_main_message"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/dp_12"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--图层-->
                    <TextView
                        android:id="@+id/tv_layers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:drawableTop="@drawable/ic_window_frame"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingTop="5dp"
                        android:paddingEnd="@dimen/dp_10"
                        android:paddingBottom="5dp"
                        android:text="@string/main_layers"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_12" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorTextAssistant" />

                    <!--报到流程-->
                    <TextView
                        android:id="@+id/tv_flow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:drawableTop="@drawable/ic_flow"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingTop="5dp"
                        android:paddingEnd="@dimen/dp_10"
                        android:paddingBottom="5dp"
                        android:text="@string/main_flow"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_12" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorTextAssistant" />
                    <!--党政机关-->
                    <TextView
                        android:id="@+id/tv_jigou"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:drawableTop="@drawable/ic_dangzheng"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingTop="5dp"
                        android:paddingEnd="@dimen/dp_10"
                        android:paddingBottom="5dp"
                        android:text="@string/main_jigou"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_12" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorTextAssistant" />
                    <!--poi 分类 服务导航-->
                    <TextView
                        android:id="@+id/tv_poi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:drawableTop="@drawable/ic_poi"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingTop="5dp"
                        android:paddingEnd="@dimen/dp_10"
                        android:paddingBottom="5dp"
                        android:text="@string/main_poi"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_12" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorTextAssistant" />
                    <!--poi搜索 -->
                    <TextView
                        android:id="@+id/tv_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:drawableTop="@drawable/ic_search"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingTop="5dp"
                        android:paddingEnd="@dimen/dp_10"
                        android:paddingBottom="5dp"
                        android:text="@string/main_search"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_12" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorTextAssistant" />

                    <!--全景漫游-->
                    <TextView
                        android:id="@+id/tv_quanjing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:drawableTop="@drawable/ic_quanjing"
                        android:paddingLeft="@dimen/dp_10"
                        android:paddingTop="5dp"
                        android:paddingEnd="@dimen/dp_10"
                        android:paddingBottom="5dp"
                        android:text="@string/main_quanjing"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_12" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--左下角定位- 百度地图导航-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/dp_12"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/ib_flowPic"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="#fff"
                    android:src="@drawable/ic_flowpic" />


                <ImageButton
                    android:id="@+id/ib_nowLocation"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_location" />
            </LinearLayout>

            <!--右下角基本操作-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/dp_12"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/ib_reset"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_reset" />

                <ImageButton
                    android:id="@+id/ib_zoomIn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_map_jia" />


                <ImageButton
                    android:id="@+id/ib_zoomOut"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_map_jian" />

            </LinearLayout>

            <!--工具隐藏-->
            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/fa_btn"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="13dp"
                app:menu_colorNormal="#1E9FFF"
                app:menu_colorPressed="#fff"
                app:menu_colorRipple="#666"
                app:menu_icon="@mipmap/image_icon"
                app:menu_labels_position="right"
                app:menu_labels_style="@style/MenuLabelsStyle"
                app:menu_shadowColor="#444">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_flowPic"
                    style="@style/MenuButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_flowpic"
                    app:fab_colorDisabled="@color/colorAccent"
                    app:fab_label="@string/flow_label" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_nowLocation"
                    style="@style/MenuButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    app:fab_label="@string/location_label"
                    app:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_reset"
                    style="@style/MenuButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_reset"
                    app:fab_colorDisabled="@color/colorAccent"
                    app:fab_label="@string/reset_label" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_zoomIn"
                    style="@style/MenuButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_map_jia"
                    app:fab_label="@string/set_big_label"
                    app:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_zoomOut"
                    style="@style/MenuButtonsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_map_jian"
                    app:fab_label="@string/set_small_label"
                    app:fab_size="mini" />
            </com.github.clans.fab.FloatingActionMenu>
        </RelativeLayout>


        <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="end">

            <include layout="@layout/drawer_layout" />

        </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>


</RelativeLayout>